syntax = "proto3";
package user;
option go_package = "./transport";

service Login {
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

// Empty response for ChangePassword
message LoginResponse {
	bool success = 1;
}

message LoginRequest {
  string login = 1;
	string password = 2;
}
