syntax = "proto3";
package user_transport;

service PasswordChanger {
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
}

// Empty response for ChangePassword
message ChangePasswordResponse {
	bool success = 1;
}

message ChangePasswordRequest {
	string email            = 1;
	string username         = 2;
	string newPassword      = 3;
	string repeatedPassword = 4;
	string oldPassword      = 5;
}
